syntax = "proto3";
package emerald.vault;
import "crypto.proto";
import "common.proto";

message PrivateKey {
    FileType file_type = 1;
    bytes id = 2;
    oneof pk {
        EthereumPrivateKey ethereum = 3;
        BitcoinPrivateKey bitcoin = 4;
        Bip32Private xpriv = 5;
    }
    // creation date of the pk, millis since epoch, in UTC
    uint64 created_at = 6;
}

message EthereumPrivateKey {
    oneof pk_type {
        EthereumPK3 pk = 1;
    }
}

message BitcoinPrivateKey {
    Format format = 1;
    oneof pk_type {
        BitcoinRawPK pk = 2;
        OpenDime open_dime = 3;
    }

    enum Format {
        UNDEFINED = 0;
        P2PKH = 1; //P2PKH - 17VZNX1SN5NtKa8UQFxwQbFeFc3iqRYhem
        P2SH = 2; //P2SH - 3EktnHQD7RiAE6uzMj2ZifT9YgRrkSgzQX
        BECH32 = 3; //bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4
    }
}

message EthereumPK3 {
    string address = 1;
    Encrypted value = 2;
}

message BitcoinRawPK {
    bytes value = 1;
}

message OpenDime {
}

message Bip32Private {
    uint32 level = 1;
    fixed32 parent_fingerprint = 2;
    uint32 child_number = 3;
    bytes chaincode = 4;

    oneof key_type {
        bytes open_key = 5;
        Encrypted encrypted_key = 6;
    }
}
